# generic-case

./: CHANGELOG.md  README.md  default.nix  generic-case.cabal
.github/workflows/: haskell.yml
src/Data/: Case.hs  Chain.hs
src/Generics/: Case.hs  Chain.hs
test/: Util.hs
test/Data/Case/: BoolSpec.hs  EitherSpec.hs  MaybeSpec.hs
test/Data/Case/Custom/: NoParamTypeSpec.hs  OneParamTypeSpec.hs
test/Generics/Case/: BoolSpec.hs  EitherSpec.hs  MaybeSpec.hs
test/Generics/Case/Custom/: NoParamTypeSpec.hs  OneParamTypeSpec.hs
